@@ -5,6 +5,7 @@ What's New for PSPRadio
 NEW FEATURES
 BUG FIXES
 (raf) Core: USB is now working again, thanks to AhMan's for the help.
+(raf) Core: Added AUTOSTART option under USB, instead of it being its own option, and using up screenspace.
 KNOWN BUGS
 (raf) Core: Static IP connections don't work correctly. Seems the gateway is not used as it should.
 (raf) Core: Module unloading doesn't free up all memory correctly. Even though plugins can now be loaded/unloaded, the PSP can eventually crash as it runs out of memory (after loading/unloading enough times; even though I switched back and forth between the text and 3d UIs over 20 times, and everything worked fine).
